Update content in index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>Progate</title>
   </head>
   <body>
-    <h1 class="title">おなか減ったよ</h1>
-    <p>自分のPCでWebページを開発する方法を学習しましょう</p>
+    <h1 class="title">お風呂入らなきゃ</h1>
+    <p>しょうちゃんだよ</p>
   </body>
+
 </html>
