--- a/index.html
+++ b/index.html
@@ -1,12 +1,83 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Progate</title>
-  </head>
-  <body>
-    <h1 class="title">お風呂入らなきゃ</h1>
-    <p>しょうちゃんだよ</p>
-  </body>
+<!doctype html>
+<html lang="ja">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>サンプルページ</title>
+  <style>
+    :root { --bg:#f7f7fb; --card:#fff; --accent:#2b6cb0; --text:#222; }
+    body {
+      margin:0; font-family: system-ui,-apple-system, "Segoe UI", Roboto, "Hiragino Kaku Gothic ProN", "Noto Sans JP", sans-serif;
+      background:var(--bg); color:var(--text); -webkit-font-smoothing:antialiased;
+    }
+    .wrap { max-width:900px; margin:32px auto; padding:24px; }
+    header { display:flex; justify-content:space-between; align-items:center; gap:16px; }
+    h1 { margin:0; font-size:1.25rem; color:var(--accent); }
+    nav a { margin-left:12px; color:var(--accent); text-decoration:none; }
+    .card { background:var(--card); padding:18px; border-radius:10px; box-shadow:0 6px 18px rgba(20,20,40,0.06); }
+    main { display:grid; grid-template-columns: 1fr 280px; gap:20px; margin-top:18px; }
+    article h2 { margin-top:0; }
+    footer { margin-top:20px; text-align:center; color:#666; font-size:0.9rem; }
+    @media (max-width:820px) {
+      main { grid-template-columns:1fr; }
+      nav a { display:inline-block; margin:8px 6px 0 0; }
+    }
+    button { background:var(--accent); color:#fff; border:0; padding:8px 12px; border-radius:6px; cursor:pointer; }
+  </style>
+</head>
+<body>
+  <div class="wrap">
+    <header>
+      <h1>しょうちゃんのウェブページ</h1>
+      <p>誕生日は7月18日だよ</p>
+      <nav>
+        <a href="#about">About</a>
+        <a href="#projects">Projects</a>
+        <a href="#contact">Contact</a>
+      </nav>
+    </header>
 
+    <main>
+      <section class="card">
+        <article id="about">
+          <h2>はじめに</h2>
+          <p>練習でウェブサイトをつくっています。</p>
+
+          <h3 id="projects">翔ちゃんの就活状況</h3>
+          <ul>
+            <li>小川電機　ー　内定辞退</li>
+            <li>コンピュータシステム研究所　－　内定辞退</li>
+            <li>日本情報クリエイト　ー1次選考済み　</li>
+          </ul>
+
+          <h3 id="contact">お問い合わせ</h3>
+          <form onsubmit="event.preventDefault(); alert('送信されました（デモ）');">
+            <label>
+              名前<br />
+              <input type="text" name="name" style="width:100%;padding:8px;margin-top:6px;border-radius:6px;border:1px solid #ddd" />
+            </label>
+            <div style="height:8px"></div>
+            <label>
+              メッセージ<br />
+              <textarea name="message" rows="4" style="width:100%;padding:8px;margin-top:6px;border-radius:6px;border:1px solid #ddd"></textarea>
+            </label>
+            <div style="height:12px"></div>
+            <button type="submit">送信</button>
+          </form>
+        </article>
+      </section>
+
+      <aside class="card">
+        <h4>友達の写真</h4>
+      
+<img src="c:\Users\syou7\OneDrive\画像\カメラ ロール\WIN_20210517_12_26_58_Pro.jpg" height="500" width="500">
+      </aside>
+    </main>
+
+    <footer>
+      <small>© 2025 Suported by しょうちゃん</small>
+    </footer>
+  </div>
+</body>
 </html>
+
