--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>サンプルページ</title>
+  <title>翔ちゃんのホームページ</title>
   <style>
     :root { --bg:#f7f7fb; --card:#fff; --accent:#2b6cb0; --text:#222; }
     body {
@@ -68,7 +68,7 @@
       </section>
 
       <aside class="card">
-        <h4>友達の写真</h4>
+        <h4>翔ちゃんの写真</h4>
       
 <img src="c:\Users\syou7\OneDrive\画像\カメラ ロール\WIN_20210517_12_26_58_Pro.jpg" height="500" width="500">
       </aside>
@@ -80,4 +80,5 @@
   </div>
 </body>
 </html>
+
 
