Change image source to URL in index.html
Updated image source to use a URL instead of a local path.

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <aside class="card">
         <h4>翔ちゃんの写真</h4>
       
-<img src="c:\Users\syou7\OneDrive\画像\カメラ ロール\WIN_20210517_12_26_58_Pro.jpg" height="500" width="500">
+<img src="https://github.com/syou718-989/-/blob/main/WIN_20210517_12_26_58_Pro.jpg" height="500" width="500">
       </aside>
     </main>
 
@@ -80,5 +80,6 @@
   </div>
 </body>
 </html>
+
 
 
