--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <aside class="card">
         <h4>翔ちゃんの写真</h4>
       
-<img src="https://github.com/syou718-989/-/blob/main/WIN_20210517_12_26_58_Pro.jpg" height="500" width="500">
+<img src="WIN_20210517_12_26_58_Pro.jpg" height="500" width="500">
       </aside>
     </main>
 
@@ -80,6 +80,7 @@
   </div>
 </body>
 </html>
+
 
 
 
